Workaround for failing test when mockk tries to spyk a proxy object